Fixed invisible tick in check box on base color bg.

--- a/check/box/box.view.css
+++ b/check/box/box.view.css
@@ -6,6 +6,7 @@
 	left: 0;
 	border-radius: var(--mol_skin_round);
 	box-shadow: 0 0 0 1px var(--mol_skin_light_line);
+	color: var(--mol_skin_light_text);
 }
 
 [mol_check_box_icon] + [mol_check_box_label]:not(:empty) {
